{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 65,
  "lineage": "1cfa7b08-13e2-32c1-8835-466ca8553105",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:748317434455:internet-gateway/igw-0d602e42e95f3c8b8",
            "id": "igw-0d602e42e95f3c8b8",
            "owner_id": "748317434455",
            "tags": {
              "Name": "dev-gw"
            },
            "tags_all": {
              "Name": "dev-gw"
            },
            "vpc_id": "vpc-0dcff48ee53d40f63"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:748317434455:route-table/rtb-0ac209798d951e492",
            "id": "rtb-0ac209798d951e492",
            "owner_id": "748317434455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d602e42e95f3c8b8",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d602e42e95f3c8b8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-rt"
            },
            "tags_all": {
              "Name": "dev-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcff48ee53d40f63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev-gw",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev1-sub-to-dev-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0720153cd5283f3fa",
            "route_table_id": "rtb-0ac209798d951e492",
            "subnet_id": "subnet-0c2c079beffe29576"
          },
          "dependencies": [
            "aws_internet_gateway.dev-gw",
            "aws_route_table.dev-route-table",
            "aws_subnet.dev1-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev2-sub-to-dev-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0cf30c974336aa1",
            "route_table_id": "rtb-0ac209798d951e492",
            "subnet_id": "subnet-0117ece2c0061aba5"
          },
          "dependencies": [
            "aws_internet_gateway.dev-gw",
            "aws_route_table.dev-route-table",
            "aws_subnet.dev2-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-web-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:748317434455:security-group/sg-0bc98596eca971d64",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc98596eca971d64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "748317434455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-web"
            },
            "tags_all": {
              "Name": "allow-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcff48ee53d40f63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev1-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:748317434455:subnet/subnet-0c2c079beffe29576",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2c079beffe29576",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "748317434455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev1-subnet",
              "kubernetes.io/cluster/demo-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev1-subnet",
              "kubernetes.io/cluster/demo-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dcff48ee53d40f63"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev2-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:748317434455:subnet/subnet-0117ece2c0061aba5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0117ece2c0061aba5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "748317434455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev2-subnet",
              "kubernetes.io/cluster/demo-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev2-subnet",
              "kubernetes.io/cluster/demo-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dcff48ee53d40f63"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:748317434455:vpc/vpc-0dcff48ee53d40f63",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-070e3c095a14e7feb",
            "default_route_table_id": "rtb-0ac195f850c729f66",
            "default_security_group_id": "sg-05c60769e6bb8f9bf",
            "dhcp_options_id": "dopt-0a9ab1102752e5dde",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dcff48ee53d40f63",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ac195f850c729f66",
            "owner_id": "748317434455",
            "tags": {
              "Name": "development"
            },
            "tags_all": {
              "Name": "development"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:748317434455:security-group/sg-0899e10bdaeee4a89",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09be2f94c93e94fd3"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09be2f94c93e94fd3"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-0899e10bdaeee4a89",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09be2f94c93e94fd3"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "demo-cluster-cluster-20231120193323445900000002",
            "name_prefix": "demo-cluster-cluster-",
            "owner_id": "748317434455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-cluster-cluster"
            },
            "tags_all": {
              "Name": "demo-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcff48ee53d40f63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:748317434455:security-group/sg-09be2f94c93e94fd3",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0899e10bdaeee4a89"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-09be2f94c93e94fd3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0e03fc6495b1e7e31"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0899e10bdaeee4a89"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0899e10bdaeee4a89"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "demo-cluster-node-20231120193323446400000003",
            "name_prefix": "demo-cluster-node-",
            "owner_id": "748317434455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-cluster-node",
              "kubernetes.io/cluster/demo-cluster": "owned"
            },
            "tags_all": {
              "Name": "demo-cluster-node",
              "kubernetes.io/cluster/demo-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcff48ee53d40f63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3714331291",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0899e10bdaeee4a89",
            "security_group_rule_id": "sgr-0eb301085142f6af6",
            "self": false,
            "source_security_group_id": "sg-09be2f94c93e94fd3",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2074262064",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0899e10bdaeee4a89",
            "security_group_rule_id": "sgr-058b3a3951d1a5d52",
            "self": false,
            "source_security_group_id": "sg-09be2f94c93e94fd3",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4182089216",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0899e10bdaeee4a89",
            "security_group_rule_id": "sgr-0eb301085142f6af6",
            "self": false,
            "source_security_group_id": "sg-09be2f94c93e94fd3",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-443050213",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09be2f94c93e94fd3",
            "security_group_rule_id": "sgr-012ec59f7dea1081a",
            "self": false,
            "source_security_group_id": "sg-0899e10bdaeee4a89",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-1913933142",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09be2f94c93e94fd3",
            "security_group_rule_id": "sgr-0fe902b6a0139d503",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-2915725384",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09be2f94c93e94fd3",
            "security_group_rule_id": "sgr-0ff20f6d28540ebd3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-3545519429",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-09be2f94c93e94fd3",
            "security_group_rule_id": "sgr-0d8544ccedf252309",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1636096259",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09be2f94c93e94fd3",
            "security_group_rule_id": "sgr-005e20391928a9a95",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4024654693",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-09be2f94c93e94fd3",
            "security_group_rule_id": "sgr-0f8102d7505254793",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2743584047",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09be2f94c93e94fd3",
            "security_group_rule_id": "sgr-0b724af6e1e4bbc12",
            "self": false,
            "source_security_group_id": "sg-0899e10bdaeee4a89",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2340330188",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09be2f94c93e94fd3",
            "security_group_rule_id": "sgr-0dd182529eeedd792",
            "self": false,
            "source_security_group_id": "sg-0899e10bdaeee4a89",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-120415645",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09be2f94c93e94fd3",
            "security_group_rule_id": "sgr-005e20391928a9a95",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2742208114",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-09be2f94c93e94fd3",
            "security_group_rule_id": "sgr-0f8102d7505254793",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-cluster.module.eks_managed_node_group[\"blue\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:748317434455:security-group/sg-043db172f378e2587",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-043db172f378e2587",
            "ingress": [],
            "name": "blue-eks-node-group-20231120193328624500000007",
            "name_prefix": "blue-eks-node-group-",
            "owner_id": "748317434455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blue-eks-node-group"
            },
            "tags_all": {
              "Name": "blue-eks-node-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcff48ee53d40f63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow-web-traffic",
            "aws_vpc.dev-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-cluster.module.eks_managed_node_group[\"green\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:748317434455:security-group/sg-0f27922c653b0a11b",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-0f27922c653b0a11b",
            "ingress": [],
            "name": "green-eks-node-group-20231120193328624500000006",
            "name_prefix": "green-eks-node-group-",
            "owner_id": "748317434455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "green-eks-node-group"
            },
            "tags_all": {
              "Name": "green-eks-node-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcff48ee53d40f63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow-web-traffic",
            "aws_vpc.dev-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}